--- a/frontend/src/components/MultiVideo/MultiVideo.css
+++ b/frontend/src/components/MultiVideo/MultiVideo.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #a3a3a3;
+  background-color: #f5f8fe;
 }
 
 .grid-container {
@@ -19,7 +19,7 @@
 }
 
 .grid-item {
-  background-color: #d9d9d9;
+  background-color: #fff;
   border: 2px solid black;
   display: flex;
   justify-content: center;
@@ -39,7 +39,7 @@
   bottom: 0;
   width: 100%;
   height: 10%;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #d9d9d9;
   border-top: 2px solid black;
   color: white;
   display: flex;
