--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -1,12 +1,12 @@
 .dashboard-container {
   display: flex;
-  height: 100vh;
+  height: 100%;
 }
 
 .sidebar {
   background: #fff;
   color: #000;
-  height: 100vh;
+  height: 200vh;
   min-width: 250px;
   transition: all 0.3s ease;
 }
@@ -153,4 +153,44 @@
 
 .dashboard-stat-val {
   width: 15vw;
+}
+
+.grid-item--lineChart-stat {
+  align-self: flex-start;
+  padding: 1rem;
+  width: 10rem;
+}
+
+.custom-tooltip {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  border-radius: 12px;
+}
+
+.tooltip-label {
+  background-color: #161616e9;
+  width: 100%;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 0.5rem;
+  color: #fff;
+}
+
+.tooltip-item-1,
+.tooltip-item-2 {
+  background-color: #4b4b4bd1;
+  width: 100%;
+  text-align: center;
+  border: 0;
+  color: #fff;
+  padding: 0.5rem;
+}
+
+.tooltip-item-2 {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
