--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -89,3 +89,22 @@
   /* font-weight: 500; */
   text-align: center;
 }
+
+.profile-container-projectContainer {
+  background-color: #fff;
+  height: 122vh;
+  width: 45vw;
+  border-radius: 10px;
+  margin-top: 1.8rem;
+  padding: 2rem;
+  padding-right: 1.5rem;
+  margin-left: 1.9rem;
+}
+
+.profile-container-projectheader {
+  font-size: 29px;
+  font-weight: 500;
+}
+
+.profile-conatiner-projectsubheader {
+}
