--- a/frontend/src/components/Onboarding/Onboarding.css
+++ b/frontend/src/components/Onboarding/Onboarding.css
@@ -1,31 +1,29 @@
 .onboarding-container-outer-box {
-  height: 95vh;
+  height: 85vh;
   background-color: white;
   border-radius: 10px;
   border: 1px solid black;
   margin-left: 2rem;
   padding: 2rem;
+  position: relative;
 }
 
 .onboarding-container-heading {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 25rem;
   height: 9vh;
-  width: 19vw;
-  background-color: #d9d9d9;
-  border-radius: 10px;
-  border: 1px solid black;
+  width: 100%;
+  text-transform: uppercase;
+  letter-spacing: 0.17rem;
   font-size: 29px;
   font-weight: 500;
   margin-bottom: 2rem;
+  margin-top: -1rem;
 }
 
 .onboarding-container-button {
-  height: 15px;
-  width: 35px;
-  background-color: red;
-  border-radius: 10px;
-  border: 1px solid black;
+  position: absolute;
+  right: 5%;
+  bottom: 5%;
 }
