--- a/frontend/src/components/Report/Report.css
+++ b/frontend/src/components/Report/Report.css
@@ -9,13 +9,71 @@
 }
 
 .report-container-box {
-  display: flex;
-  align-items: center;
+  /* display: flex; */
+  /* align-items: center; */
   margin-left: 1.3rem;
   margin-top: 35px;
-  background-color: gray;
+  background-color: white;
   width: 76vw;
   height: 100vh;
+  position: relative;
+}
+
+.report-container-box-heading {
+  position: absolute;
+  margin-top: 1.2rem;
+  margin-left: 1.5rem;
+  height: 30px;
+  width: 15rem;
+  background-color: rgb(207, 204, 204);
+  border-radius: 10px;
+  border: 1px solid black;
+  font-size: 19px;
+  color: black;
+  font-weight: 500;
+  text-align: center;
+}
+
+.report-cards {
+  width: 75vw;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  padding: 20px;
+  flex-direction: row;
+}
+
+.report-container-card {
+  height: 8rem;
+  width: 15rem;
+  background-color: #f5f8fe;
+  border: 2px solid black;
+  border-radius: 10px;
+  display: flex;
+  margin-left: 1.5rem;
+  /* position: absolute; */
+  margin-top: 5rem;
+  padding-top: 10px;
+  text-align: center;
+}
+
+.report-container-card-heading {
+  position: absolute;
+  align-items: center;
+  font-weight: 500;
+  font-size: 20px;
+  margin-left: 1.8rem;
+}
+
+.report-container-card-number {
+  font-size: 65px;
+  font-weight: 600;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  margin-left: 2rem;
+  margin-top: 2rem;
 }
 
 .report-container-bottom {
