--- a/frontend/src/components/Report/Report.css
+++ b/frontend/src/components/Report/Report.css
@@ -25,7 +25,7 @@
   margin-left: 1.5rem;
   height: 30px;
   width: 15rem;
-  background-color: rgb(207, 204, 204);
+  background-color: rgb(227, 224, 224);
   border-radius: 10px;
   border: 1px solid black;
   font-size: 19px;
@@ -53,21 +53,26 @@
   margin-left: 1.5rem;
   /* position: absolute; */
   margin-top: 5rem;
-  padding-top: 10px;
+  padding: 0.5rem;
   text-align: center;
 }
 
 .report-container-card-heading {
+  width: 10rem;
+  height: 2rem;
+  display: flex;
   position: absolute;
+  justify-content: center;
   align-items: center;
-  font-weight: 500;
-  font-size: 20px;
-  margin-left: 1.8rem;
+  font-weight: 600;
+  font-size: 22px;
+  margin-left: 0.2rem;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .report-container-card-number {
-  font-size: 65px;
-  font-weight: 600;
+  font-size: 62px;
+  font-weight: 400;
   display: flex;
   position: relative;
   align-items: center;
