--- a/frontend/src/components/Report/Report.css
+++ b/frontend/src/components/Report/Report.css
@@ -15,7 +15,7 @@
   margin-top: 35px;
   background-color: white;
   width: 76vw;
-  height: 100vh;
+  height: 130vh;
   position: relative;
 }
 
@@ -53,12 +53,13 @@
   margin-left: 1.5rem;
   /* position: absolute; */
   margin-top: 5rem;
-  padding: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   text-align: center;
 }
 
 .report-container-card-heading {
-  width: 10rem;
+  width: 15rem;
   height: 2rem;
   display: flex;
   position: absolute;
@@ -66,18 +67,19 @@
   align-items: center;
   font-weight: 600;
   font-size: 22px;
-  margin-left: 0.2rem;
+  /* margin-left: 0.2rem; */
   color: rgba(0, 0, 0, 0.5);
 }
 
 .report-container-card-number {
   font-size: 62px;
   font-weight: 400;
+  width: 15rem;
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center;
-  margin-left: 2rem;
+  /* margin-left: 2rem; */
   margin-top: 2rem;
 }
 
